[package]
name = "stm32l0x3_hal"
version = "0.1.0"
authors = ["Craig Bishop <craig@craigjb.com>"]
edition = "2018"

[dependencies]
cortex-m-rt = "0.6.11"

[dependencies.embedded-hal]
version = "0.2.3"
features = ["unproven"]

[dependencies.cortex-m]
version = "0.6.1"

[dependencies.bare-metal]
version = "0.2.5"
features = ["const-fn"]

[dependencies.stm32l0x3]
path = "../stm32l0x3"
features = ["rt"]

[dependencies.vcell]
version = "0.1.2"
features = ["const-fn"]
